--- a/css/shop-homepage.css
+++ b/css/shop-homepage.css
@@ -24,7 +24,7 @@ body {
 
 .carousel-caption {
 background: #FFFFFF;
-opacity: 0.7;
+opacity: 0.85;
 color:#333;
 padding-left: 5%;
 padding-right:5%;
@@ -260,7 +260,14 @@ display: block;
     .carousel-caption p {
        display: none;
     }
-    
+   .placeholder {
+       height: 370px;
+   }
+    .col-sm-4.selectionbox2 {
+        padding-left: 20px;
+        width: 50%;
+    }
+}
 @media (max-width: 991px) {
     
     .carousel-caption h2 {
@@ -270,7 +277,23 @@ display: block;
     .carousel-caption p {
        display: none;
     }
+    
+    .placeholder {
+        height: 700px;
+    }
+     .qty2 {
+     width: 5%;
+     }
+ .col-sm-4.selectionbox2 {
+        padding-left: 20px;
+        width: 50%;
+    }
+  .selectlist {
+     width: 100px;
         
+        
+    }
+}
     
 @media (max-width: 767px) {
     
@@ -288,15 +311,168 @@ display: block;
        
     }
     
+
+}
 .arrangements {
     margin-bottom: 15px;
 }
+
+    
+.productimage {
+    float: left;
+    margin-right: 4%;
    
+ 
+    
+    
+}
+    
+   .productheader {
+   margin-top: 0%;
+       padding-top: 0%;
+    
+} 
+    
+
+    
+.producttext {
+    font-size: 1.1em;
+    font-weight: 200;
+    font-family: sans-serif;
+}
+    
+.placeholder {
+   width: 320px;
+    
+    float:left;
+    margin-right: 4%;
+}
+
+.qty {
+    width: 30px;
+    height: 29px;
+    text-align: center;
+     border: 1px solid ;
+     padding: 5px 7px;
+    margin-right: 5px;
+    padding-bottom: 4px;
+    font-size: 1.125em;
+    
+}
+.qty2 {
+    
+    float: left;
+    width: 58px;
+    margin-right: 0px;
+    font-size: 1.1em;
+    
+}
+.btn2 {
+    background: none repeat scroll 0 0 #fff;
+    border: 1px solid ;
+
+    display: inline-block;
+    font-family: sans-serif;
+    font-size: 1.1em;
+    padding: 2px 3px;
+    padding-bottom: 1px;
+  margin-right: 0px;
+    text-transform: uppercase;
+
+   float: left;
+    position: relative;
+}
+
+.btn2:hover {
+
+    color: green;
+    
+}
+.checkbox2 {
+     font-size: 1.1em;
+    font-weight: 200;
+    font-family: sans-serif;
+    margin: 10px;
+    position: relative;
+float:left;
+    margin-top: 0;
+     margin-left: 0;
     
 
     
     
+}
+
+.selectlist {
+    width: 180px;
+    position: relative;
+    float: left;
+  
+     font-size: 1.1em;
+    font-weight: 200;
+    font-family: sans-serif;
+
+    padding-top: 5px;
+    padding-bottom: 5px;
     
+    
+    margin: 2%;
+   margin-left: 0%;
     
 
+    line-height:60px;
+    margin-bottom: 0px;
+}
+
+
+
+.container .jumbotron, .container-fluid .jumbotron {
+    padding-bottom: 4%;
     
+}
+
+.productback {
+    background-image: url("../images/navbackground.jpg");
+    width: 70%;
+    
+}
+
+
+.row.product {
+    margin-left: 0px;
+    padding-left: 0px;
+    margin-right: 0px;
+}
+
+.col-sm-6.selectionbox{
+   padding-left:0;
+}
+
+.qtytext {
+    float:left;
+}
+
+.col-xs-4 {
+    float: left;
+}
+.col-xs-6 {
+    float: left;
+}
+
+.img-responsive {
+    margin-bottom:
+        10px;
+}
+
+.jumbotron h1.productheader2 {
+    font-size: 1.8em;
+    margin-top:0;
+        
+}
+
+@media (max-width: 485px) {
+    
+    .container.fixed {
+        width: 485px;
+    }
+}
